@@ -1,4 +1,4 @@
-#serial 5
+#serial 6
 
 # On some hosts (e.g., HP-UX 10.20, SunOS 4.1.4, Solaris 2.5.1), mkstemp has a
 # silly limit that it can create no more than 26 files from a given template.
@@ -6,14 +6,14 @@
 # On OSF1/Tru64 V4.0F, the system-provided mkstemp function can create
 # only 32 files per process.
 # On systems like the above, arrange to use the replacement function.
-AC_DEFUN([UTILS_FUNC_MKSTEMP],
+AC_DEFUN([gl_FUNC_MKSTEMP],
 [dnl
   AC_REPLACE_FUNCS(mkstemp)
   if test $ac_cv_func_mkstemp = no; then
-    utils_cv_func_mkstemp_limitations=yes
+    gl_cv_func_mkstemp_limitations=yes
   else
     AC_CACHE_CHECK([for mkstemp limitations],
-      utils_cv_func_mkstemp_limitations,
+      gl_cv_func_mkstemp_limitations,
       [
 	AC_TRY_RUN([
 #         include <stdlib.h>
@@ -31,15 +31,15 @@ AC_DEFUN([UTILS_FUNC_MKSTEMP],
 	    exit (0);
 	  }
 	  ],
-	utils_cv_func_mkstemp_limitations=no,
-	utils_cv_func_mkstemp_limitations=yes,
-	utils_cv_func_mkstemp_limitations=yes
+	gl_cv_func_mkstemp_limitations=no,
+	gl_cv_func_mkstemp_limitations=yes,
+	gl_cv_func_mkstemp_limitations=yes
 	)
       ]
     )
   fi
 
-  if test $utils_cv_func_mkstemp_limitations = yes; then
+  if test $gl_cv_func_mkstemp_limitations = yes; then
     AC_LIBOBJ(mkstemp)
     AC_LIBOBJ(tempname)
     AC_DEFINE(mkstemp, rpl_mkstemp,
